--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,10 @@ body {
   font-family: 'Lato', sans-serif;
   font-size: 16px;
   line-height: 1;
+  margin-bottom: 5%;
 }
 
-textarea{
+textarea {
   background: transparent;
   border: none;
   resize: none;
@@ -18,7 +19,8 @@ textarea{
   background-color: transparent;
   color: black;
   border-radius: 0;
-  border-bottom: 10px solid black;
+  border-bottom: 2px solid black;
+  padding: 35px 40px 5px 40px;
 }
 
 .description{
@@ -37,9 +39,10 @@ textarea{
 }
 
 .hour {
-  background-color: #ffffff;
+  background-color: lightgray;
   color: #000000;
   border-top: 1px dashed #000000;
+  padding: 10px 0px 10px 100px;
 }
 
 .past {
@@ -59,15 +62,18 @@ textarea{
 
 .saveBtn {
   border-left: 1px solid black;
-  border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px;
-  background-color: #06AED5;
-  color: white;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  color: black;
 }
 
 .saveBtn i:hover {
   font-size: 20px;
   transition: all .3s ease-in-out;
+}
+
+i {
+  padding: 2.5px 5px 2.5px 5px;
 }
 
 /* @media (max-width: 768px) {
