--- a/css/style.css
+++ b/css/style.css
@@ -46,17 +46,17 @@ textarea {
 }
 
 .past {
-  background-color: #d3d3d3;
-  color: white;
+  background-color: #D4F4DD;
+  color: black;
 }
 
 .present {
-  background-color: #ff6961;
+  background-color: #17BEBB;
   color: white;
 }
 
 .future {
-  background-color: #77dd77;
+  background-color: #0E7C7B;
   color: white;
 }
 
